--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -896,7 +896,7 @@
                             <h4>Pedido #${order.id}</h4>
                             <p>Cliente: ${order.customer.customerName}</p>
                             <p>Endereço: ${order.deliveryPoint.address}</p>
-                            <p>Valor: R$ ${order.orderTotal.toFixed(2)}</p>
+                            <p>Valor: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
                             <p>Status: ${getStatusDisplay(order.status)}</p>
                         </li>
                     `;
@@ -949,7 +949,7 @@
                             <h4>Pedido #${order.id}</h4>
                             <p>Cliente: ${order.customer.customerName}</p>
                             <p>Endereço: ${order.deliveryPoint.address}</p>
-                            <p>Valor: R$ ${order.orderTotal.toFixed(2)}</p>
+                            <p>Valor: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
                         </li>
                     `;
                 });
@@ -971,7 +971,7 @@
                     printContent += `<p>Pedido #${order.id}</p>`;
                     printContent += `<p>Cliente: ${order.customer.customerName}</p>`;
                     printContent += `<p>Endereço: ${order.deliveryPoint.address}</p>`;
-                    printContent += `<p>Valor: R$ ${order.orderTotal.toFixed(2)}</p>`;
+                    printContent += `<p>Valor: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>`;
                     printContent += '<hr>';
                 });
             }
@@ -1047,7 +1047,7 @@
                 }
             }
 
-            if (shouldShowNotification && !hideNotification) {
+            if (shouldShowNotification) {
                 showSameAddressPopup(sameAddressMap, locationMap);
             } else {
                 closeSameAddressPopup();
@@ -1056,7 +1056,7 @@
 
         function showSameAddressPopup(sameAddressMap, locationMap) {
             const now = new Date().getTime();
-            if (now - lastShownNotificationTime < 120000) { // 2 minutos
+            if (now - lastShownNotificationTime < 60000) { // 1 minuto
                 return;
             }
 
@@ -1079,9 +1079,6 @@
             message.innerHTML = content;
             popup.style.display = 'block';
             lastShownNotificationTime = now;
-            setTimeout(() => {
-                closeSameAddressPopup();
-            }, 60000); // 1 minuto
         }
 
         function closeSameAddressPopup() {
@@ -1089,12 +1086,6 @@
             if (popup) {
                 popup.style.display = 'none';
             }
-        }
-
-        function hideSameAddressNotification() {
-            hideNotification = true;
-            closeSameAddressPopup();
-            saveDataToLocalStorage();
         }
 
         function resetCounters() {
@@ -1115,7 +1106,6 @@
             sameAddressOrders = {};
             shownSameAddressNotifications.clear();
             lastShownNotificationTime = 0;
-            hideNotification = false;
             document.getElementById('avgPrepTime').textContent = '0.0 min';
             document.getElementById('totalOrders').textContent = '0';
             document.getElementById('ongoingOrders').textContent = '0';
