--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -525,15 +525,9 @@
             return date.toISOString().replace(/\.\d{3}Z$/, '-03:00');
         }
 
-function isWithinTimeRange(date) {
-    const hour = date.getHours();
-    const minutes = date.getMinutes();
-    const totalMinutes = hour * 60 + minutes;
-    return totalMinutes >= 12 * 60 + 30 && totalMinutes <= 22 * 60 + 30;
-}
         function isWithinTimeRange(date) {
-    return true;
-}
+            return true; // Permitir pedidos a qualquer hora
+        }
 
         async function fetchOrders() {
             try {
