--- a/public/relatorios.html
+++ b/public/relatorios.html
@@ -243,8 +243,8 @@
                     (currentFilters.situacao === 'finished' && order.status === 'closed') ||
                     (currentFilters.situacao === 'canceled' && order.status === 'cancelled');
                 return (!currentFilters.motoqueiro || (order.courier && order.courier.courierName === currentFilters.motoqueiro)) &&
-                       statusMatch &&
-                       (currentFilters.pagamento.length === 0 || currentFilters.pagamento.includes(order.paymentMethod));
+                    statusMatch &&
+                    (currentFilters.pagamento.length === 0 || currentFilters.pagamento.includes(order.paymentMethod));
             });
 
             updateTable(filteredOrders);
@@ -259,11 +259,12 @@
             orders.forEach(order => {
                 const row = tbody.insertRow();
                 row.insertCell().textContent = order.id || 'N/A';
-                row.insertCell().textContent = order.createdAt ? moment(order.createdAt).format('yyyy-MM-dd'T'HH:mm:ssX') : 'N/A';
+                row.insertCell().textContent = order.createdAt ? moment(order.createdAt).format('DD/MM/YYYY HH:mm:ss') : 'N/A';
                 row.insertCell().textContent = order.customer ? order.customer.customerName : 'N/A';
                 row.insertCell().textContent = order.courier ? order.courier.courierName : 'N/A';
                 row.insertCell().textContent = getStatusDisplay(order.status);
                 row.insertCell().textContent = translatePaymentMethod(order.paymentMethod);
+                row.insertCell().textContent = order.address || 'N/A'; // Adicionando o campo Endereço
                 row.insertCell().textContent = order.orderTotal !== undefined ? `R$ ${order.orderTotal.toFixed(2)}` : 'N/A';
 
                 totalValue += order.orderTotal || 0;
