--- a/public/relatorios.html
+++ b/public/relatorios.html
@@ -136,12 +136,11 @@
             <thead>
                 <tr>
                     <th>ID do Pedido</th>
-                    <th>Data/Hora de Chegada</th>
                     <th>Cliente</th>
                     <th>Motoqueiro</th>
                     <th>Situação</th>
                     <th>Forma de Pagamento</th>
-                    <th>Endereço</th>
+                    <th>Detalhes do Pedido</th> <!-- Coluna Detalhes do Pedido adicionada -->
                     <th>Valor Total</th>
                 </tr>
             </thead>
@@ -241,7 +240,7 @@
                 const statusMatch = !currentFilters.situacao ||
                     order.status === currentFilters.situacao ||
                     (currentFilters.situacao === 'finished' && order.status === 'closed') ||
-                    (currentFilters.situacao === 'canceled' && order.status === 'cancelled');
+                    (currentFilters.situacao === 'canceled' && (order.status === 'canceled' || order.status === 'cancelled'));
                 return (!currentFilters.motoqueiro || (order.courier && order.courier.courierName === currentFilters.motoqueiro)) &&
                     statusMatch &&
                     (currentFilters.pagamento.length === 0 || currentFilters.pagamento.includes(order.paymentMethod));
@@ -259,12 +258,11 @@
             orders.forEach(order => {
                 const row = tbody.insertRow();
                 row.insertCell().textContent = order.id || 'N/A';
-                row.insertCell().textContent = order.createdAt ? moment(order.createdAt).format('DD/MM/YYYY HH:mm:ss') : 'N/A';
                 row.insertCell().textContent = order.customer ? order.customer.customerName : 'N/A';
                 row.insertCell().textContent = order.courier ? order.courier.courierName : 'N/A';
                 row.insertCell().textContent = getStatusDisplay(order.status);
                 row.insertCell().textContent = translatePaymentMethod(order.paymentMethod);
-                row.insertCell().textContent = order.address || 'N/A'; // Adicionando o campo Endereço
+                row.insertCell().textContent = order.orderDetails || 'N/A'; // Adicionando o campo Detalhes do Pedido
                 row.insertCell().textContent = order.orderTotal !== undefined ? `R$ ${order.orderTotal.toFixed(2)}` : 'N/A';
 
                 totalValue += order.orderTotal || 0;
